Added permission endpoints
